Moved html5shiv to head; prevent search bar from collapsing in ie9-10

--- a/style.css
+++ b/style.css
@@ -346,7 +346,9 @@ ul.result-list li h3 { margin-bottom: 5px; }
 }
 #header-menu ul li a:hover { color: #000; }
 #header-menu .search { width: 200px; float: right; position: relative; top: -3px; margin-right: 8px; }
+.ie-new #header-menu .search { width: 180px; }
 #header-menu .search #s { width: 160px !ie; height: 14px !ie; } /* IE7 */
+.ie-new #header-menu .search button { padding: 0 3px; }
 
 
 
